# constrain

./: .gitignore  README.md  pyproject.toml
scripts/: analysis.py  analyze_run.py  analyze_run_xgb.py  debug_features.py  live_main.py  metrics.py  metrics_analyzer.py  test_signal_engine.py  threshold_sweep.py  xgb.py
src/constrain/: config.py  constrain.toml  energy.py  energy_computer.py  live_signal_runner.py  main.py  model.py  policy.py  reasoning_state.py  replay_runner.py  runner.py  simulator.py
src/constrain/analysis/: application_evaluator.py  collapse_signal.py  compare_policies.py  dashboard_exporter.py  escalation_signal.py  final_outcome_evaluator.py  high_dimensional_analysis.py  metrics_aggregator.py  metrics_analyzer.py  policy_benchmark.py  policy_comparison.py  policy_replay.py  rolling_signal_monitor.py  signal_discovery.py  signal_discovery_service.py
src/constrain/calibration/: recursive.py
src/constrain/causal/: apply_policy.py
src/constrain/control/: __init__.py  controller.py  dynamics.py  rl_parameter_adapter.py  types.py
src/constrain/core/: main.py  model.py  runner.py  simulator.py
src/constrain/data/: base.py  memory.py  memory_protocol.py
src/constrain/energy/: adversarial.py  calculator.py  calibration.py  custom_types.py  energy_computer.py  gate.py
src/constrain/evaluation/: evaluation_service.py  policy_comparison.py  statistical_comparison.py
src/constrain/experiments/: base.py  control_experiment_runner.py  eval_rl_adapter.py  exp3_intervention_tuning.py  (+7 more)
tests/: test_control.py  test_reasoning_state.py
(+190 files in other folders)
